--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ python:
 # comando para instalar dependencias
 install: 
   - pip install -r requirements.txt
-  - pip install coveralls
+  - pip install codecov
 
 # comando para rodas os testes
 script: 
   coverage run manage.py test --settings=config.settings.test
 
 after_success:
-  coveralls
+  codecov
