--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ install:
 
 # comando para rodas os testes
 script: 
+  python manage.py makemigrations
+  python manage.py migrate
   coverage run manage.py test --settings=config.settings.travis
 
 after_success:
