--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - pip install codecov
 
 before_script:
+  - psql -c 'create database chamados;' -U postgres
   - python manage.py makemigrations --settings=config.settings.travis
   - python manage.py migrate --settings=config.settings.travis
 
