admin para crud de servicos

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 
 # comando para rodas os testes
 script: 
-  - coverage run manage.py test --settings=config.settings.travis
+  - coverage run manage.py test
 
 after_success:
   codecov
