--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - psql -c 'create database chamados;' -U postgres
   - python manage.py makemigrations --settings=config.settings.travis
   - python manage.py migrate --settings=config.settings.travis
-  - python manage.py collectstatic
+  - python manage.py collectstatic --noinput
 
 # comando para rodas os testes
 script: 
