adicionado instalacao do bower no travis via npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
   - pip install codecov
 
 before_script:
+  - npm install -g bower
+  - bower install
   - psql -c 'create database chamados;' -U postgres
   - python manage.py makemigrations --settings=config.settings.travis
   - python manage.py migrate --settings=config.settings.travis
