adicionado instalacao do bower no travis via npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ install:
 
 before_script:
   - npm install -g bower
-  - bower install
+  - npm install -g grunt-cli
+  - bower install -f
   - psql -c 'create database chamados;' -U postgres
   - python manage.py makemigrations --settings=config.settings.travis
   - python manage.py migrate --settings=config.settings.travis
