--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 before_script:
   - npm install -g bower
   - npm install -g grunt-cli
+  - bower init
   - bower install -f
   - psql -c 'create database chamados;' -U postgres
   - python manage.py makemigrations --settings=config.settings.travis
