--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ python:
 
 before_install:
   - export DJANGO_SETTINGS_MODULE=config.settings.travis
+  - wget -P /tmp/ https://github.com/CMCuritiba/django-cmcldapauth/blob/master/dist/django-cmcldapauth-0.1.tar.gz?raw=true 
 
 # comando para instalar dependencias
 install: 
   - pip install -r requirements.txt
   - pip install codecov
-  - wget https://github.com/CMCuritiba/django-cmcldapauth/blob/master/dist/django-cmcldapauth-0.1.tar.gz?raw=true -P /tmp
   - pip install /tmp/django-cmcldapauth-0.1.tar.gz
 
 before_script:
