--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,12 @@ python:
 
 before_install:
   - export DJANGO_SETTINGS_MODULE=config.settings.travis
-  - mkdir -p /tmp/pacotes
-  - wget -P /tmp/pacotes https://github.com/CMCuritiba/django-cmcldapauth/blob/master/dist/django-cmcldapauth-0.1.tar.gz?raw=true 
 
 # comando para instalar dependencias
 install: 
   - pip install -r requirements.txt
   - pip install codecov
-  - pip install /tmp/pacotes/django-cmcldapauth-0.1.tar.gz
+  - pip install https://github.com/CMCuritiba/django-cmcldapauth/blob/master/dist/django-cmcldapauth-0.1.tar.gz?raw=true
 
 before_script:
   - npm install -g bower
