configuracao inicial staging

--- a/deploy/staging/nginx.conf
+++ b/deploy/staging/nginx.conf
@@ -1,18 +1,24 @@
 server {
     listen 80;
 
-    server_name chamados.staging.cmc.pr.gov.br;
+    server_name chamados.cmc.pr.gov.br;
 
-    rewrite ^(.*) https://chamados.staging.cmc.pr.gov.br$1 permanent;
+    rewrite ^ https://$http_host$request_uri? permanent;
+
+    server_tokens off;
 }
 
 server {
-    listen 443 ssl;
+    listen 443;
 
-    server_name chamados.staging.cmc.pr.gov.br;
-    
+    ssl on;
+
+    server_name chamados.cmc.pr.gov.br;
+
     ssl_certificate     /etc/ssl/certs/cmc/201603-201903/cmc.pr.gov.br.crt;
     ssl_certificate_key /etc/ssl/private/cmc/201603-201903/cmc.pr.gov.br.key;
+
+    server_tokens off;
 
     access_log /var/www/html/chamados/logs/nginx-access.log;
     error_log /var/www/html/chamados/logs/nginx-error.log;
@@ -31,7 +37,7 @@ server {
         proxy_redirect off;
 
         if (!-f $request_filename) {
-            proxy_pass http://127.0.0.1:8879;
+            proxy_pass http://127.0.0.1:8899;
             break;
         }
     }
