--- a/deploy/staging/supervisor.conf
+++ b/deploy/staging/supervisor.conf
@@ -6,3 +6,12 @@ stopsignal=KILL
 redirect_stderr=True  
 stdout_logfile=/var/log/supervisor/chamados.stdout.log  
 stderr_logfile=/var/log/supervisor/chamados.stderr.log  
+
+[program:celery]
+command=python manage.py celery worker --app=chamadoscmc.taskapp.celery --settings=config.settings.production
+directory=/usr/share/webapps/chamados
+user=www-data  
+stopsignal=KILL  
+redirect_stderr=True  
+stdout_logfile=/var/log/supervisor/chamados.celery.stdout.log  
+stderr_logfile=/var/log/supervisor/chamados.celery.stderr.log  
