--- a/deploy/staging/supervisor.conf
+++ b/deploy/staging/supervisor.conf
@@ -8,7 +8,8 @@ stdout_logfile=/var/log/supervisor/chamados.stdout.log
 stderr_logfile=/var/log/supervisor/chamados.stderr.log  
 
 [program:celery]
-command=/usr/share/envs/chamados/bin/celery worker --app=chamadoscmc.taskapp.celery --settings=config.settings.production
+export DJANGO_SETTINGS_MODULE='config.settings.production'
+command=/usr/share/envs/chamados/bin/celery worker --app=chamadoscmc.taskapp.celery
 directory=/usr/share/webapps/chamados
 user=www-data  
 stopsignal=KILL  
