--- a/deploy/staging/supervisor.conf
+++ b/deploy/staging/supervisor.conf
@@ -8,7 +8,7 @@ stdout_logfile=/var/log/supervisor/chamados.stdout.log
 stderr_logfile=/var/log/supervisor/chamados.stderr.log  
 
 [program:celery]
-command=DJANGO_SETTINGS_MODULE='config.settings.production' /usr/share/envs/chamados/bin/celery worker --app=chamadoscmc.taskapp.celery
+command=/usr/share/envs/chamados/bin/celery worker --app=chamadoscmc.taskapp.celery
 directory=/usr/share/webapps/chamados
 user=www-data  
 stopsignal=KILL  
