--- a/deploy/staging/supervisor.conf
+++ b/deploy/staging/supervisor.conf
@@ -9,6 +9,7 @@ stderr_logfile=/var/log/supervisor/chamados.stderr.log
 
 [program:celery]
 command=/usr/share/envs/chamados/bin/celery worker --app=chamadoscmc.taskapp.celery
+environment=DJANGO_SETTINGS_MODULE='config.settings.production'
 directory=/usr/share/webapps/chamados
 user=www-data  
 stopsignal=KILL  
