--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - npm install -g grunt-cli
   - bower install
   - psql -c 'create database chamados;' -U postgres
-  - python manage.py makemigrations --settings=config.settings.travis
+  - python manage.py makemigrations autentica core --settings=config.settings.travis
   - python manage.py migrate --settings=config.settings.travis
   - python manage.py bower_install
   - python manage.py collectstatic --noinput
