adicionada migration para criar view v_setor

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,9 @@ before_script:
   - psql -c 'create database chamados;' -U postgres
   - python manage.py makemigrations autentica core --settings=config.settings.travis
   - python manage.py migrate --settings=config.settings.travis
+  - python manage.py migrate core 0001_initial --settings=config.settings.travis
   - python manage.py bower_install
   - python manage.py collectstatic --noinput
-  - psql -c 'CREATE TABLE v_setor (
-                set_id serial primary key,
-                set_nome character varying(500) not null,
-                set_sigla character varying(100) not null,
-                set_id_superior integer,
-                set_ativo boolean not null, 
-                set_tipo character varying(1)
-            );' -U postgres
 
 # comando para rodas os testes
 script: 
