--- a/deploy/staging/nginx.conf
+++ b/deploy/staging/nginx.conf
@@ -1,3 +1,7 @@
+upstream chamados_server {
+    server unix:/usr/share/webapps/chamados/gunicorn.sock fail_timeout=0;    
+}
+
 server {
     listen 80;
 
@@ -37,7 +41,7 @@ server {
         proxy_redirect off;
 
         if (!-f $request_filename) {
-            proxy_pass http://127.0.0.1:8055;
+            proxy_pass http://chamados_server;
             break;
         }
     }
