configuracao certificados producao

--- a/deploy/production/nginx.conf
+++ b/deploy/production/nginx.conf
@@ -19,8 +19,8 @@ server {
 
     server_name chamados.cmc.pr.gov.br;
 
-    ssl_certificate     /etc/ssl/certs/cmc/201603-201903/cmc.pr.gov.br.crt;
-    ssl_certificate_key /etc/ssl/private/cmc/201603-201903/cmc.pr.gov.br.key;
+    ssl_certificate     /etc/ssl/certs/cmc.pr.gov.br.crt;
+    ssl_certificate_key /etc/ssl/private/cmc.pr.gov.br.key;
 
     server_tokens off;
 
