--- a/deploy/staging/nginx.conf
+++ b/deploy/staging/nginx.conf
@@ -5,7 +5,7 @@ upstream chamados_server {
 server {
     listen 80;
 
-    server_name chamados.cmc.pr.gov.br;
+    server_name chamados.staging.cmc.pr.gov.br;
 
     rewrite ^ https://$http_host$request_uri? permanent;
 
