--- a/deploy/staging/nginx.conf
+++ b/deploy/staging/nginx.conf
@@ -7,6 +7,8 @@ server {
 
     server_name chamados.staging.cmc.pr.gov.br;
 
+    root /var/www/html/chamados/;
+
     rewrite ^ https://$http_host$request_uri? permanent;
 
     server_tokens off;
@@ -17,7 +19,7 @@ server {
 
     ssl on;
 
-    server_name chamados.cmc.pr.gov.br;
+    server_name chamados.staging.cmc.pr.gov.br;
 
     ssl_certificate     /etc/ssl/certs/cmc/201603-201903/cmc.pr.gov.br.crt;
     ssl_certificate_key /etc/ssl/private/cmc/201603-201903/cmc.pr.gov.br.key;
