--- a/deploy/production/supervisor.conf
+++ b/deploy/production/supervisor.conf
@@ -1,3 +1,12 @@
+[program:bootstrap]
+command=/usr/share/webapps/chamados/deploy/production/bootstrap.sh
+directory=/usr/share/webapps/chamados
+user=root
+stopsignal=KILL
+redirect_stderr=True
+stdout_logfile=/var/log/supervisor/chamados.stdout.log
+stderr_logfile=/var/log/supervisor/chamados.stderr.log
+
 [program:chamados]
 command=/usr/share/webapps/chamados/deploy/production/run.sh
 directory=/usr/share/webapps/chamados
