adicionado favicon na aplicacao. closes #104

--- a/deploy/staging/nginx.conf
+++ b/deploy/staging/nginx.conf
@@ -37,6 +37,10 @@ server {
         alias   /var/www/html/chamados/media/;
     }
 
+    location /favicon.ico {
+        alias /var/www/html/chamados/static/favicon.ico;
+    }
+
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
