ajustes tunning supervisor e celery

--- a/deploy/production/supervisor.conf
+++ b/deploy/production/supervisor.conf
@@ -6,6 +6,7 @@ stopsignal=KILL
 redirect_stderr=True  
 stdout_logfile=/var/log/supervisor/chamados.stdout.log  
 stderr_logfile=/var/log/supervisor/chamados.stderr.log  
+killasgroup=true
 
 [program:celery]
 command=/usr/share/envs/chamados/bin/celery worker --app=chamadoscmc.taskapp.celery
@@ -16,3 +17,4 @@ stopsignal=KILL
 redirect_stderr=True  
 stdout_logfile=/var/log/supervisor/chamados.celery.stdout.log  
 stderr_logfile=/var/log/supervisor/chamados.celery.stderr.log  
+killasgroup=true
