--- a/deploy/staging/nginx.conf
+++ b/deploy/staging/nginx.conf
@@ -26,8 +26,11 @@ server {
 
     server_tokens off;
 
-    access_log /var/www/html/chamados/logs/nginx-access.log;
-    error_log /var/www/html/chamados/logs/nginx-error.log;
+    # access_log /var/www/html/chamados/logs/nginx-access.log;
+    # error_log /var/www/html/chamados/logs/nginx-error.log;
+
+    access_log /var/log/nginx/access-chamados.log;
+    error_log /var/log/nginx/error-chamados.log;
 
     location /static/ {
         alias   /var/www/html/chamados/static/;
